--- a/assignment10/css/base.css
+++ b/assignment10/css/base.css
@@ -5,7 +5,8 @@
 */
 @font-face {
     font-family: "KenyanCoffee";
-    src: url('https://ajray.w3.uvm.edu/cs148develop/assignment10/kenyancoffee.woff') format('woff');
+    src: url('https://ajray.w3.uvm.edu/cs148develop/assignment10/fonts/kenyancoffee.woff') format('woff');
+	src: url('https://ajray.w3.uvm.edu/cs148develop/assignment10/fonts/kenyan_coffee_eot.eot') format('eot');
 }
 /*------------------------   standard elements  ----------------------------- */
 body{
